Simplify link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <h1>Welcome</h1>
     <p>
         This is my personal website.<br>
-        Visit:
-        <a href="https://sanjitbhandari.com.np">
-            sanjitbhandari.com.np
-        </a>
+        Visit: <a href="https://sanjitbhandari.com.np">sanjitbhandari.com.np</a>
     </p>
 </body>
 </html>
